--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="main_theme_pag">#FF000000</color>
     <color name="white">#FFFFFF</color>
-    <color name="gray">#33353535</color>
+    <color name="gray">#336D6B6B</color>
     <color name="orange">#FFA500</color>
 </resources>
