--- a/app/src/main/res/layout/activity_add_assessment.xml
+++ b/app/src/main/res/layout/activity_add_assessment.xml
@@ -3,12 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/main_theme_pag"
     android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/gray"
+        >
 
         <TextView
             android:text="Medidas Corporais"
@@ -16,14 +19,15 @@
             android:textStyle="bold"
             android:layout_marginBottom="16dp"
             android:layout_height="match_parent"
-            android:layout_width="match_parent"/>
+            android:layout_width="match_parent"
+            android:textColor="@color/white"/>
 
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:columnCount="2"
-            android:rowCount="4"
-            android:alignmentMode="alignMargins">
+            android:alignmentMode="alignMargins"
+            >
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
@@ -32,6 +36,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="12dp"
                 android:hint="Peso Total"
+                app:boxBackgroundColor="@color/light_gray"
+                android:layout_marginStart="8dp"
                 app:suffixText="kg">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -48,7 +54,9 @@
                 android:layout_columnWeight="1"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="12dp"
+                app:boxBackgroundColor="@color/light_gray"
                 android:hint="% Gordura"
+                android:layout_marginEnd="8dp"
                 app:suffixText="%">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -65,11 +73,13 @@
                 android:layout_columnWeight="1"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="12dp"
-                android:hint="Peitoral"
+                app:boxBackgroundColor="@color/light_gray"
+                android:layout_marginStart="8dp"
+                android:hint="Braço esquerdo"
                 app:suffixText="cm">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/inputPeito"
+                    android:id="@+id/inputLeftArm"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal" />
@@ -82,15 +92,134 @@
                 android:layout_columnWeight="1"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="12dp"
-                android:hint="Braço"
+                app:boxBackgroundColor="@color/light_gray"
+                android:hint="Braço direito"
+                android:layout_marginEnd="8dp"
                 app:suffixText="cm">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/inputBraco"
+                    android:id="@+id/inputRightArm"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="12dp"
+                app:boxBackgroundColor="@color/light_gray"
+                android:hint="Perna esquerdo"
+                android:layout_marginStart="8dp"
+                app:suffixText="cm">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputLeftLeg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="12dp"
+                app:boxBackgroundColor="@color/light_gray"
+                android:hint="Perna direito"
+                android:layout_marginEnd="8dp"
+                app:suffixText="cm">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputRightLeg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="12dp"
+                app:boxBackgroundColor="@color/light_gray"
+                android:layout_marginStart="8dp"
+                android:hint="Panturrilha esquerdo"
+                app:suffixText="cm">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputLowerLeftLeg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="12dp"
+                app:boxBackgroundColor="@color/light_gray"
+                android:hint="Panturrilha direito"
+                android:layout_marginEnd="8dp"
+                app:suffixText="cm">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputLowerRightLeg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="12dp"
+                app:boxBackgroundColor="@color/light_gray"
+                android:hint="Peitoral"
+                app:suffixText="cm"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputChest"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="12dp"
+                app:boxBackgroundColor="@color/light_gray"
+                android:hint="Barriga"
+                android:layout_marginEnd="8dp"
+                app:suffixText="cm">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputBelly"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
 
         </GridLayout>
 
