--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="main_theme_pag">#FF000000</color>
     <color name="white">#FFFFFF</color>
-    <color name="gray">#333C3B3B</color>
+    <color name="gray">#1e1e1e</color>
+    <color name="light_gray">#b0b0b0</color>
     <color name="orange">#FFA500</color>
 </resources>
