--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/main_theme_pag">
 
     <TextView
@@ -11,6 +12,8 @@
         android:layout_height="wrap_content"
         tools:text="nome de usuario"
         android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -18,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/item_assessment_history"
+        app:layout_constraintTop_toBottomOf="@+id/name_user"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
