--- a/app/src/main/res/layout/activity_train_page.xml
+++ b/app/src/main/res/layout/activity_train_page.xml
@@ -23,7 +23,7 @@
             android:id="@+id/homeButton"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:background="parent"
+            android:background="@color/gray"
             android:padding="16dp"
             android:layout_marginBottom="8dp"
             android:src="@drawable/home"
@@ -36,7 +36,7 @@
             android:id="@+id/exerButton"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:background="parent"
+            android:background="@color/gray"
             android:padding="16dp"
             android:layout_marginBottom="8dp"
             android:src="@drawable/fitness"
@@ -49,7 +49,7 @@
             android:id="@+id/runButton"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:background="parent"
+            android:background="@color/gray"
             android:padding="16dp"
             android:layout_marginBottom="8dp"
             android:src="@drawable/run"
@@ -62,7 +62,7 @@
             android:id="@+id/userButton"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:background="parent"
+            android:background="@color/gray"
             android:padding="16dp"
             android:layout_marginBottom="8dp"
             android:src="@drawable/user"
