--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -143,7 +143,7 @@
             android:id="@+id/homeButton"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:background="parent"
+            android:background="@color/gray"
             android:padding="16dp"
             android:layout_marginBottom="8dp"
             android:src="@drawable/home"
@@ -156,7 +156,7 @@
             android:id="@+id/exerButton"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:background="parent"
+            android:background="@color/gray"
             android:padding="16dp"
             android:layout_marginBottom="8dp"
             android:src="@drawable/fitness"
@@ -169,7 +169,7 @@
             android:id="@+id/runButton"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:background="parent"
+            android:background="@color/gray"
             android:padding="16dp"
             android:layout_marginBottom="8dp"
             android:src="@drawable/run"
@@ -182,7 +182,7 @@
             android:id="@+id/userButton"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:background="parent"
+            android:background="@color/gray"
             android:padding="16dp"
             android:layout_marginBottom="8dp"
             android:src="@drawable/user"
