--- a/app/src/main/res/layout/activity_add_assessment.xml
+++ b/app/src/main/res/layout/activity_add_assessment.xml
@@ -6,12 +6,24 @@
     android:background="@color/main_theme_pag"
     android:padding="16dp">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@color/gray"
         >
+
+        <ImageButton
+            android:id="@+id/button_back_add_assessment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow_back"
+            android:background="@color/gray"
+            android:padding="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
 
         <TextView
             android:text="Medidas Corporais"
