--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -7,7 +7,7 @@
     android:background="@color/main_theme_pag">
 
     <ImageButton
-        android:id="@+id/buttonBack"
+        android:id="@+id/button_back_active_exercise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/arrow_back"
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
+        app:layout_constraintBottom_toBottomOf="@+id/button_back_active_exercise"
         tools:text="Nome do exercicio"
         android:textColor="@color/white"
         />
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonBack"
+        app:layout_constraintTop_toBottomOf="@+id/button_back_active_exercise"
         android:text="Carga"
         android:textColor="@color/white"
         />
