--- a/app/src/main/res/layout/activity_train_page.xml
+++ b/app/src/main/res/layout/activity_train_page.xml
@@ -12,6 +12,17 @@
         app:layout_constraintBottom_toTopOf="@+id/baseboard"
         />
 
+    <ImageButton
+        android:id="@+id/button_back_train_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/arrow_back"
+        android:background="@color/main_theme_pag"
+        android:padding="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/baseboard"
         android:layout_width="match_parent"
