--- a/app/src/main/res/layout/activity_workout_editor.xml
+++ b/app/src/main/res/layout/activity_workout_editor.xml
@@ -6,11 +6,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/main_theme_pag">
 
+    <ImageButton
+        android:id="@+id/button_back_workout_editor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/arrow_back"
+        android:background="@color/main_theme_pag"
+        android:padding="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
     <TextView
         android:id="@+id/name_exercise_workout_editor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_back_workout_editor"
         android:text="nome do treino"
         android:textColor="@color/white"
         />
