--- a/app/src/main/res/layout/activity_active_session.xml
+++ b/app/src/main/res/layout/activity_active_session.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="28dp"
         android:background="@color/main_theme_pag"
         />
 
