--- a/app/src/main/res/layout/activity_train_page.xml
+++ b/app/src/main/res/layout/activity_train_page.xml
@@ -3,14 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/main_theme_pag">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/baseboard"
-        />
 
     <ImageButton
         android:id="@+id/button_back_train_page"
@@ -23,65 +17,11 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/baseboard"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <ImageButton
-            android:id="@+id/homeButton"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:background="@color/gray"
-            android:padding="16dp"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/home"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/exerButton"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <ImageButton
-            android:id="@+id/exerButton"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:background="@color/gray"
-            android:padding="16dp"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/fitness"
-            app:layout_constraintStart_toEndOf="@+id/homeButton"
-            app:layout_constraintEnd_toStartOf="@id/runButton"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <ImageButton
-            android:id="@+id/runButton"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:background="@color/gray"
-            android:padding="16dp"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/run"
-            app:layout_constraintStart_toEndOf="@+id/exerButton"
-            app:layout_constraintEnd_toStartOf="@+id/userButton"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <ImageButton
-            android:id="@+id/userButton"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:background="@color/gray"
-            android:padding="16dp"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/user"
-            app:layout_constraintStart_toEndOf="@+id/runButton"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@id/button_back_train_page"
+        tools:listitem="@layout/item_workout_card"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
