--- a/app/src/main/res/layout/activity_workout_editor.xml
+++ b/app/src/main/res/layout/activity_workout_editor.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/arrow_back"
         android:background="@color/main_theme_pag"
         android:padding="8dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
@@ -27,6 +28,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_workout_editor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/name_exercise_workout_editor"
@@ -34,6 +36,7 @@
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_add_exercise_workout_editor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,6 +47,7 @@
         />
 
     <Button
+        android:id="@+id/button_save_workout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
