--- a/app/src/main/res/layout/item_exercise_row.xml
+++ b/app/src/main/res/layout/item_exercise_row.xml
@@ -32,4 +32,13 @@
         app:layout_constraintTop_toBottomOf="@+id/times_exercised"
         />
 
+    <ImageButton
+        android:id="@+id/button_delete_exercise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/delete"
+        android:background="@color/main_theme_pag"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
