terminado a logica de adicao e exclusao de assessments do profile (a data dos assessment ainda esta automatico, falta a edicao dos dados e abriri os detalhes do assessment desejado)

--- a/app/src/main/res/layout/item_assessment_history.xml
+++ b/app/src/main/res/layout/item_assessment_history.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         tools:text="dia da avaliacao"
         android:textColor="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
     <TextView
@@ -31,6 +32,16 @@
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/weight_avaliation"
         />
+
+    <ImageButton
+        android:id="@+id/button_delete_assessment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/delete"
+        android:background="@color/main_theme_pag"
+        android:padding="8dp"/>
 
 
 
