--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/item_workout_card"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
