--- a/app/src/main/res/layout/activity_details_workout.xml
+++ b/app/src/main/res/layout/activity_details_workout.xml
@@ -35,14 +35,27 @@
         />
 
     <Button
+        android:id="@+id/button_edit_workout_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/recycler_view_active_session"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="12dp"
+        android:text="editar \ntreino"
+        android:textSize="12sp"
+        android:backgroundTint="@color/gray"
+        />
+
+    <ImageButton
+        android:id="@+id/button_delete_workout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_view_active_session"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="12dp"
-        android:text="Finalizar Treino"
+        android:src="@drawable/delete"
         android:backgroundTint="@color/gray"
         />
 
