adicionado exclusao de exercise nos workouts

--- a/app/src/main/res/layout/item_exercise_row.xml
+++ b/app/src/main/res/layout/item_exercise_row.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         tools:text="nome do exercicio"
         android:textColor="@color/orange"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         />
 
     <TextView
@@ -21,6 +23,7 @@
         tools:text="4 series"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/name_exercise_row"
+        app:layout_constraintStart_toStartOf="parent"
         />
 
     <TextView
@@ -30,6 +33,17 @@
         tools:text="40kg"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/times_exercised"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <ImageButton
+        android:id="@+id/button_delete_exercise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/delete"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/main_theme_pag"
         />
 
 
